app/javascript/flavours/glitch/styles/mastodon/components.scss
/* ... */
.attachment-list {
  display: flex;
  font-size: 14px;
  border: 1px solid var(--color-border-primary);
  border-radius: 4px;
  margin-top: 14px; // glitch: reduced margins
  overflow: hidden;

  &__icon {
    flex: 0 0 auto;
    color: var(--color-text-tertiary);
    padding: 8px 18px;
    cursor: default;
    border-inline-end: 1px solid var(--color-border-primary);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 26px;
  }

  &__list {
    list-style: none;
    padding: 4px 0;
    padding-inline-start: 8px;
    display: flex;
    flex-direction: column;
    justify-content: center;

    li {
      display: block;
      padding: 4px 0;
    }

    a {
      text-decoration: none;
      color: var(--color-text-tertiary);
      font-weight: 500;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  &.compact {
    border: 0;
    margin-top: 4px; // glitch: reduced margins

    .attachment-list__list {
      padding: 0;
      display: block;
    }

    .icon {
      color: var(--color-text-tertiary);
      vertical-align: middle;
    }
  }
}

/* Media Gallery */
.media-gallery {
  box-sizing: border-box;
  margin-top: 8px;
  overflow: hidden;
  border-radius: 8px;
  position: relative;
  width: 100%;
  min-height: 64px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 2px;

  &--layout-1 {
    // The size of single images is determined by their
    // aspect-ratio, applied via inline style attribute
    width: initial;

    // Prevent extremely tall images from essentially becoming invisible
    min-width: 120px;
    max-height: var(--max-media-height-small);

    @container (width > 500px) {
      max-height: var(--max-media-height-large);
    }

    .detailed-status & {
      max-height: calc(2 * var(--max-media-height-large));
    }
  }

  &--layout-2 {
    & > .media-gallery__item:nth-child(1) {
      border-end-end-radius: 0;
      border-start-end-radius: 0;
    }

    & > .media-gallery__item:nth-child(2) {
      border-start-start-radius: 0;
      border-end-start-radius: 0;
    }
  }

  &--layout-3 {
    min-height: calc(64px * 2 + 8px);

    & > .media-gallery__item:nth-child(1) {
      border-end-end-radius: 0;
      border-start-end-radius: 0;
    }

    & > .media-gallery__item:nth-child(2) {
      border-start-start-radius: 0;
      border-end-start-radius: 0;
      border-end-end-radius: 0;
    }

    & > .media-gallery__item:nth-child(3) {
      border-start-start-radius: 0;
      border-end-start-radius: 0;
      border-start-end-radius: 0;
    }
  }

  &--layout-4 {
    min-height: calc(64px * 2 + 8px);

    & > .media-gallery__item:nth-child(1) {
      border-end-end-radius: 0;
      border-start-end-radius: 0;
      border-end-start-radius: 0;
    }

    & > .media-gallery__item:nth-child(2) {
      border-start-start-radius: 0;
      border-end-start-radius: 0;
      border-end-end-radius: 0;
    }

    & > .media-gallery__item:nth-child(3) {
      border-start-start-radius: 0;
      border-start-end-radius: 0;
      border-end-start-radius: 0;
      border-end-end-radius: 0;
    }

    & > .media-gallery__item:nth-child(4) {
      border-start-start-radius: 0;
      border-end-start-radius: 0;
      border-start-end-radius: 0;
    }
  }

  @include fullwidth-gallery;
}

.media-gallery__item {
  border: 0;
  box-sizing: border-box;
  display: block;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  outline: 1px solid var(--color-border-media);
  outline-offset: -1px;
  z-index: 1;

  &--tall {
    grid-row: span 2;
  }

  &--wide {
    grid-column: span 2;
  }

  .full-width & {
    border-radius: 0;
  }

  &.letterbox {
    background: var(--color-bg-media);
  }

  &--square {
    aspect-ratio: 1;
  }

  &__overlay {
    position: absolute;
    top: 0;
    inset-inline-start: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    pointer-events: none;
    padding: 8px;
    z-index: 1;

    &--corner {
      align-items: flex-start;
      justify-content: flex-end;
    }

    .icon {
      color: var(--color-text-on-media);
      filter: drop-shadow(0 0 6px var(--color-bg-media-base));
    }
  }

  &--error img {
    visibility: hidden;
  }
}

.media-gallery__item-thumbnail {
  cursor: pointer;
  display: block;
  text-decoration: none;
  color: var(--color-text-primary);
  position: relative;
  z-index: -1;
  border-radius: inherit;

  &,
  img {
    height: 100%;
    width: 100%;
    object-fit: contain;

    &:not(.letterbox) {
      height: 100%;
      object-fit: cover;
    }
  }
}

.media-gallery__preview {
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  z-index: -2;
  background: var(--color-bg-overlay);

  &--hidden {
    display: none;
  }
}

.media-gallery__gifv {
  height: 100%;
  overflow: hidden;
  position: relative;
  width: 100%;
  z-index: -1;
}

.media-gallery__item-gifv-thumbnail {
  cursor: pointer;
  height: 100%;
  width: 100%;
  object-fit: contain;
  user-select: none;

  &:not(.letterbox) {
    height: 100%;
    object-fit: cover;
  }

  &:focus {
    outline: none;
    border-radius: inherit;
  }

  // Double focus outline for better visibility on photos
  &:focus-visible::after {
    content: '';
    position: absolute;
    inset: 2px;
    z-index: 1;
    border-radius: inherit;
    border: 2px solid var(--color-text-inverted);
    outline: 2px solid var(--color-bg-inverted);
    pointer-events: none;
  }
}

/* End Media Gallery */

.detailed,
.fullscreen {
  .video-player__volume__current,
  .video-player__volume::before {
    bottom: 27px;
  }

  .video-player__volume__handle {
    bottom: 23px;
  }
}
/* ... */

